--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ant-design": "^1.0.0",
     "antd": "^5.26.4",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
